[package]
name = "refrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
arboard = "3.4.1"
biblatex = { version="0.10.0", features=["serde"] }
clap = {version="4.5.23", features=["derive"] }
colored = "2.2.0"
dialoguer = "0.11.0"
dirs-next = "2.0.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version="1.0.216", features=["derive"] }
serde_yaml = "0.9.34"
webbrowser = "1.0.3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["http1"] }
